Falta Apenas arrumas os Paragrafos

--- a/index.html
+++ b/index.html
@@ -31,84 +31,109 @@
   <main class="timeline">
 
     <!-- Item Direito -->
-    <div class="timeline-item">
-      <div class="timeline-dot"></div>
-      <span class="year">1960's</span>
-      <div class="timeline-box right">
-        <h3>Observações Moleculares</h3>
-        <p>Primeiras detecções de moléculas interestelares usando radiotelescópios.</p>
-      </div>
-    </div>
+<div class="timeline-item">
+  <div class="timeline-dot"></div>
+  <span class="year">1960's</span>
+  <div class="timeline-box right">
+    <img src="img/Group 67.png" alt="">
+    <h3>Observações Moleculares</h3>
+  </div>
+  <div class="paragrafo">
+    <p>Primeiras detecções de moléculas interestelares usando radiotelescópios.</p>
+  </div>
+</div>
 
-    <!-- Item Esquerdo -->
-    <div class="timeline-item">
-      <div class="timeline-dot"></div>
-      <span class="year">1970's</span>
-      <div class="timeline-box left">
-        <h3>Água no Espaço</h3>
-        <p>Descoberta da presença de vapor d'água em nuvens moleculares interestelares.</p>
-      </div>
-    </div>
+<!-- Item Esquerdo -->
+<div class="timeline-item">
+  <div class="timeline-dot"></div>
+  <span class="year">1970's</span>
+  <div class="timeline-box left">
+    <img src="img/Group 69.png" alt="">
+    <h3>Água no Espaço</h3>
+  </div>
+  <div class="paragrafo">
+    <p>Descoberta da presença de vapor d'água em nuvens moleculares interestelares.</p>
+  </div>
+</div>
 
-    <!-- Item Direito -->
-    <div class="timeline-item">
-      <div class="timeline-dot"></div>
-      <span class="year">1980's</span>
-      <div class="timeline-box right">
-        <h3>Moléculas Orgânicas</h3>
-        <p>Identificação de compostos como formaldeído e metanol no meio interestelar.</p>
-      </div>
-    </div>
+<!-- Item Direito -->
+<div class="timeline-item">
+  <div class="timeline-dot"></div>
+  <span class="year">1980's</span>
+  <div class="timeline-box right">
+    <img src="img/Group 67.png" alt="">
+    <h3>Moléculas Orgânicas</h3>
+  </div>
+  <div class="paragrafo">
+    <p>Identificação de compostos como formaldeído e metanol no meio interestelar.</p>
+  </div>
+</div>
 
-    <!-- Item Esquerdo -->
-    <div class="timeline-item">
-      <div class="timeline-dot"></div>
-      <span class="year">1990's</span>
-      <div class="timeline-box left">
-        <h3>Aminoácidos em Meteoritos</h3>
-        <p>Amostras de meteoritos revelam aminoácidos, sugerindo conexões com a origem da vida.</p>
-      </div>
-    </div>
+<!-- Item Esquerdo -->
+<div class="timeline-item">
+  <div class="timeline-dot"></div>
+  <span class="year">1990's</span>
+  <div class="timeline-box left">
+    <img src="img/Group 69.png" alt="">
+    <h3>Aminoácidos em Meteoritos</h3>
+  </div>
+  <div class="paragrafo">
+    <p>Amostras de meteoritos revelam aminoácidos, sugerindo conexões com a origem da vida.</p>
+  </div>
+</div>
 
-    <!-- Item Direito -->
-    <div class="timeline-item">
-      <div class="timeline-dot"></div>
-      <span class="year">1995</span>
-      <div class="timeline-box right">
-        <h3>Primeiro Exoplaneta</h3>
-        <p>Primeiro planeta fora do Sistema Solar detectado, abrindo novas possibilidades de estudo químico.</p>
-      </div>
-    </div>
+<!-- Item Direito -->
+<div class="timeline-item">
+  <div class="timeline-dot"></div>
+  <span class="year">1995</span>
+  <div class="timeline-box right">
+    <img src="img/Group 67.png" alt="">
+    <h3>Primeiro Exoplaneta</h3>
+  </div>
+  <div class="paragrafo">
+    <p>Primeiro planeta fora do Sistema Solar detectado, abrindo novas possibilidades de estudo químico.</p>
+  </div>
+</div>
 
-    <!-- Item Esquerdo -->
-    <div class="timeline-item">
-      <div class="timeline-dot"></div>
-      <span class="year">2000's</span>
-      <div class="timeline-box left">
-        <h3>Gelo Interestelar</h3>
-        <p>Confirmação da composição química de gelos em discos protoplanetários.</p>
-      </div>
-    </div>
+<!-- Item Esquerdo -->
+<div class="timeline-item">
+  <div class="timeline-dot"></div>
+  <span class="year">2000's</span>
+  <div class="timeline-box left">
+    <img src="img/Group 69.png" alt="">
+    <h3>Gelo Interestelar</h3>
+  </div>
+  <div class="paragrafo">
+    <p>Confirmação da composição química de gelos em discos protoplanetários.</p>
+  </div>
+</div>
 
-    <!-- Item Direito -->
-    <div class="timeline-item">
-      <div class="timeline-dot"></div>
-      <span class="year">2010's</span>
-      <div class="timeline-box right">
-        <h3>Moléculas em Cometas</h3>
-        <p>Missões como Rosetta detectam moléculas orgânicas complexas no cometa 67P.</p>
-      </div>
-    </div>
+<!-- Item Direito -->
+<div class="timeline-item">
+  <div class="timeline-dot"></div>
+  <span class="year">2010's</span>
+  <div class="timeline-box right">
+    <img src="img/Group 67.png" alt="">
+    <h3>Moléculas em Cometas</h3>
+  </div>
+  <div class="paragrafo">
+    <p>Missões como Rosetta detectam moléculas orgânicas complexas no cometa 67P.</p>
+  </div>
+</div>
 
-    <!-- Item Esquerdo -->
-    <div class="timeline-item">
-      <div class="timeline-dot"></div>
-      <span class="year">2020's</span>
-      <div class="timeline-box left">
-        <h3>James Webb</h3>
-        <p>Identificação de compostos químicos em atmosferas de exoplanetas com altíssima precisão.</p>
-      </div>
-    </div>
+<!-- Item Esquerdo -->
+<div class="timeline-item">
+  <div class="timeline-dot"></div>
+  <span class="year">2020's</span>
+  <div class="timeline-box left">
+    <img src="img/Group 69.png" alt="">
+    <h3>James Webb</h3>
+  </div>
+  <div class="paragrafo">
+    <p>Identificação de compostos químicos em atmosferas de exoplanetas com altíssima precisão.</p>
+  </div>
+</div>
+
 
   </main>
 
