Falta Apenas o menu hamburguer

--- a/index.html
+++ b/index.html
@@ -38,10 +38,11 @@
         <div class="seta-container">
           <img src="img/Group 67.png" alt="">
           <h3>Observações Moleculares</h3>
-        </div>
+          
       </div>
       <div class="paragrafo">
         <p>Primeiras detecções de moléculas interestelares usando radiotelescópios.</p>
+      </div>
       </div>
     </div>
 
@@ -153,8 +154,8 @@
   </main>
 
   <!-- FOOTER -->
-  <footer class="footer">
-    <button class="cta-button">VOLTAR PARA CIMA</button>
+    <footer class="footer">
+    <a href="#top" class="cta-button">VOLTAR PARA CIMA</a>
   </footer>
 
 </body>
