--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 
   <!-- FOOTER -->
   <footer class="footer">
-    <button class="cta-button">VOLTAR PARA CIMA</button>
+    <a href="#top" class="cta-button">VOLTAR PARA CIMA</a>
   </footer>
 
 <script>
